Better error handling + Implemented Swagger
