# backend/api/v1/routes/api_data_routes.go
@@ -10,10 +10,7 @@ func enableApiDataRoutes() {
 	limiter := tollbooth.NewLimiter(1/10.0, nil)
 	apiData := router.Group("/api/v1")
 	{
-		apiData.POST("/apidata", tollbooth_gin.LimitHandler(limiter), controllers.CreateAPIData)
 		apiData.GET("/apidata", tollbooth_gin.LimitHandler(limiter), controllers.GetAPIDatas)
 		apiData.GET("/apidata/:oid", tollbooth_gin.LimitHandler(limiter), controllers.GetAPIData)
-		apiData.PATCH("/apidata/:oid", tollbooth_gin.LimitHandler(limiter), controllers.UpdateAPIData)
-		apiData.DELETE("/apidata/:oid", tollbooth_gin.LimitHandler(limiter), controllers.DeleteAPIData)
 	}
 }
